# experiment-support-ai

./: .env.example  .gitignore  README.md  config.py  ingest.py  main.py  pyproject.toml  regression_ticket.txt
data/videos/: regression.vtt
src/rag_cli/: main.py
src/support_ai/: config.py  ingest.py
